styles.css
/* General */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font: Roboto, sans-serif;
}

.page {
    display: grid;
    grid-template: 150px 1fr / 1fr 4fr;
    height: 100vh;
}

/* Header */

.header {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    display: grid;
    grid-template-rows: 30% 70%;
    row-gap: 10px;;
}

.header-utils {
    grid-row: 1 / 2 ;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

form {
    flex: 1.5;
    grid-column: 1 / 2;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.header-utils > div {
    display: flex;
    flex: 1;
    gap: 30px;
    justify-content: center;
    align-items: center;
}


form input[type="search"] {
    background-color: gray;
    width: 90%;
    border: 0px;
    padding: 0px;
}


.welcome-bar{
    grid-row: 2 / 3;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.post-buttons {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.post-buttons > ul{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.welcome-bar div {
    flex: 1;
}

.welcome-bar > div:first-of-type {
    flex: 1;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 3fr;
    align-items: center;
    justify-content: center;
}

form button, #notifications, #profile-button {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    width: 20px;
    height: 20px;
    border: none;
    background-color: transparent;
    cursor: pointer;
}

#dashboard-icon {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    width: 50px;
    height: 50px;
    border: none;
    background-color: transparent;
    cursor: pointer;
}

.header h2 {
    margin: 0px;
}

form button {   
    background-image: url("icons/search-icon.svg");
    
}

#notifications {
    background-image: url('icons/notifications-icon.svg');
}

#profile-button {
    background-image: url('icons/profile-icon.svg');
}

.welcome-bar img {
    width: 50px;
    height: 50px;
}

.welcome-bar > div > div {
    grid-row: 1 / 3;
    grid-column: 1 / 2;
    display: flex;
    justify-content: center;
    align-items: center;
}


.welcome-bar h3 {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
}   

.welcome-bar h2 {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}   


.post-buttons > ul > li {
    list-style: none;

}
.post-buttons ul li button {
    color: white;
    background-color: blue;
    border: none;
    border-radius: 8px;
    padding: 10px 20px;
}

/* Siderbar */
.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    background-color: yellow;
}


/* Container  */
.container {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    background-color: tomato;
}

